added progress bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Team8FlipGame</string>
     <string name="score">SCORE</string>
+    <string name="download_progress">Downloading 0 of 20 images...</string>
 </resources>
