add colorFilter when choosing images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="play">Play</string>
     <string name="leader_board">Leader Board</string>
     <string name="name">Name</string>
+    <string name="credit">Credit</string>
 </resources>
