--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,9 @@
     <string name="matches">0/10 matches</string>
     <string name="url">https://stocksnap.io/search/cat</string>
     <string name="fetchBtn">Fetch</string>
-    <string name="play">Play</string>
-    <string name="leader_board">Leader Board</string>
     <string name="name">Name</string>
+    <string name="well_play">Well play!</string>
+    <string name="dia_Score">Score:</string>
+    <string name="ok">OK</string>
+    <string name="dia_points">20 points</string>
 </resources>
