--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="dia_Score">Score:</string>
     <string name="ok">OK</string>
     <string name="dia_points">20 points</string>
+    <string name="selected_images">selected_images</string>
+    <string name="play">play</string>
+    <string name="leader_board">leader_board</string>
+
 </resources>
