--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
     <string name="dia_points">20 points</string>
     <string name="selected_images">selected_images</string>
     <string name="play">play</string>
-    <string name="leader_board">leader_board</string>
+    <string name="leader_board">leaderboard</string>
 
 </resources>
