--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="name">Name</string>
     <string name="credit">Credit</string>
     <string name="selected_images">0 out of 6 images selected</string>
+    <string name="easy_mode">Easy</string>
+    <string name="normal_mode">Normal</string>
+    <string name="hard_mode">Hard</string>
+
 </resources>
