Updated DB to support difficulty scaling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="dia_points">20 points</string>
     <string name="play">play</string>
     <string name="leader_board">leaderboard</string>
+    <string name="difficulty">DIFFICULTY</string>
 
 </resources>
