minor layout edits to activity_credits.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="members">Bianca Cao Zengyu \nDaryl Kouk Leong Jun \n Martin Ng Hong Yi \n Pwint Theingi Aung Win
 \n Wutt Yee Hnin Lwin \n Wu Yirui</string>
     <string name="Licenses">Licenses</string>
-    <string name="lincense_detail">License details etc</string>
+    <string name="lincense_detail">Music: Nitendo(Pokemon/Super Mario) \nCat Pictures: Google.com</string>
     <string name="matches">0/6 matches</string>
     <string name="url">https://stocksnap.io/search/cat</string>
     <string name="fetchBtn">Fetch</string>
