edited some UI stuff, added new bg to leaderboard, renamed resource files and deleted unused resource files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="play">play</string>
     <string name="leader_board">leaderboard</string>
     <string name="difficulty">DIFFICULTY</string>
+    <string name="bug_found">Found a bug ?</string>
 
 </resources>
